--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar mode="ios">
     <ion-title>
       Ionic Blank
     </ion-title>
@@ -7,8 +7,9 @@
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding">
+  <div  class="ion-padding">
     The world is your oyster.
     <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
   </div>
+  <ion-button mode="md" class="ion-btn" (click)="onClick()">Button</ion-button>
 </ion-content>
