--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,5 +11,5 @@
     The world is your oyster.
     <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
   </div>
-  <ion-button mode="md" class="ion-btn" (click)="onClick()">Button</ion-button>
+  <ion-button class="ion-btn" (click)="onClick()">Button</ion-button>
 </ion-content>
